--- a/app/tpls/home/leftnav/projectNavTestset.html
+++ b/app/tpls/home/leftnav/projectNavTestset.html
@@ -14,7 +14,7 @@
                     <i class="iconfont icon-editor"></i>
                 </span>
             <div class="dropdownDefault floatright treefunicon" dropdown>
-                <span class="chatIconButton floatright" data-tip="编辑节点" dropdown-toggle>
+                <span class="chatIconButton floatright" data-tip="新增节点" dropdown-toggle>
                         <i class="iconfont icon-add"></i>
                     </span>
                 <ul class="dropdown-menu transition" dropdown-menu role="menu">
