--- a/app/tpls/home/main/demand/useCaseScenario.html
+++ b/app/tpls/home/main/demand/useCaseScenario.html
@@ -50,7 +50,7 @@
                         <span class="chatIconButton">
 		                    <i class="iconfont icon-brush_fill"></i>组合设计用例
 		                </span>
-                        <span class="chatIconButton floatright">
+                        <span class="chatIconButton floatright" ng-click="open('importFuncPoint','lg')">
 		                    <i class="iconfont icon-guanlian"></i>导入已有功能点
 		                </span>
                         <span class="chatIconButton floatright" ng-click="open('createFuncPoints','lg')">
