--- a/app/tpls/home/main/demand/usecaseHistory.html
+++ b/app/tpls/home/main/demand/usecaseHistory.html
@@ -12,7 +12,7 @@
                     <a href="" class="cursor_p">用例设计</a>
                 </li>
                 <li class="current">
-                    <a href="" class="cursor_p">需求链接</a>
+                    <a href="" class="cursor_p">需求历史</a>
                 </li>
                 <div class="clear"></div>
             </ul>
