--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -14,9 +14,9 @@
                 <span class="chatIconButton" ng-click="open('runningDevice','lg')">
                     <i class="iconfont icon-guanlian"></i>复制
                 </span>                
-                <span class="chatIconButton">
+                <a class="chatIconButton" ui-sref="device" target="_blank">
                     <i class="iconfont icon-brush_fill"></i>剪切
-                </span>
+                </a>
                 <span class="chatIconButton">
                     <i class="iconfont icon-import"></i>粘贴
                 </span>
