--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -4,7 +4,7 @@
     <div class="projectBodyTitle">
         测试集管理
     </div>
-    <div class="useCaseListfunc clearfix">
+    <!-- <div class="useCaseListfunc clearfix">
         <div class="dropdownDefault floatleft" dropdown>
             <div dropdown-toggle class="dropdowntoggle">
                 <span class="dropdowntoggletext">需求状态</span>
@@ -16,8 +16,8 @@
                 <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
             </ul>
         </div>
-    </div>
-    <div class="projectBodyContent" style="top: 100px;">
+    </div> -->
+    <div class="projectBodyContent" style="top: 56px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
@@ -33,6 +33,10 @@
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
                 </span>
+                <div class="floatright searchBox">
+                    <input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
+                    <i class="iconfont icon-search"></i>
+                </div>
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
