--- a/app/tpls/modal/addAttributeValue.html
+++ b/app/tpls/modal/addAttributeValue.html
@@ -1,13 +1,10 @@
 <style type="text/css">
-	.titleUl li p {
-		float: left;		
-		font-size: 14px;
-		color: #313131;
-		line-height: 34px		
-	}
+	
 </style>
 <div class="modal-header">
-	<h3>添加属性值</h3>
+	<h3>添加属性值
+	<i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+	</h3>
 </div>
 <div class="modal-body modalBody">
 	<ul class="titleUl">
@@ -23,5 +20,5 @@
 </div>
 <div class="modal-footer">
 	<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-	<input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+	<input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
