--- a/app/tpls/modal/createTaskTestset.html
+++ b/app/tpls/modal/createTaskTestset.html
@@ -2,7 +2,9 @@
 </style>
 <div class="modal-content">
 	<div class="modal-header">
-		<h3>选择测试集</h3>
+		<h3>选择测试集
+		<i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+		</h3>
 	</div>
 	<div class="modal-body" style="height: 300px;">
 		<div class="treeBody">
@@ -36,7 +38,7 @@
 	<div class="modal-footer">
 		<div class="floatleft defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>设为默认</em></div>
 		<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-		<input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="ok()">
+		<input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 	</div>
 </div>
 </div>
