--- a/app/tpls/modal/editFilter.html
+++ b/app/tpls/modal/editFilter.html
@@ -1,19 +1,19 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>添加角色
+    <h3>添加/编辑过滤器
     <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
     </h3>
 </div>
 <div class="modal-body modalBody">
     <ul class="titleUl">          	
        <li class="clearfix">  
-       		<h1>角色名称：</h1>
-            <input type="text" class="inputText floatleft" style=" width: 400px;margin-right: 7px;">                 	
-        </li>                
+       		<h1>名称：</h1>
+            <input type="text" class="inputText floatleft" style=" width: 370px;">                 	
+        </li>             
     </ul>
 </div>
-<div class="modal-footer">   
+<div class="modal-footer">
     <input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-    <input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
+    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
