--- a/app/tpls/modal/mubanCreateproject.html
+++ b/app/tpls/modal/mubanCreateproject.html
@@ -1,6 +1,8 @@
 <div class="modal-content addNewScene">
 	<div class="modal-header">
-		<h3>模板创建项目</h3>
+		<h3>模板创建项目
+    <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+    </h3>
 	</div>
 	<div class="modal-body">
        <ul class="titleUl">
@@ -16,6 +18,6 @@
 	</div>
 	<div class="modal-footer">
 		<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-		<input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+    <input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 	</div>
 </div>
