--- a/app/tpls/modal/runningDeviceChooseCase.html
+++ b/app/tpls/modal/runningDeviceChooseCase.html
@@ -46,7 +46,7 @@
         <div class="floatleft defaultcheckBox">
             <input class="floatleft" type="checkbox" name=""><em>设为默认</em></div>
         <input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok();open('runningDevice','lg')">
-        <input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="ok()">
+        <input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
     </div>
 </div>
 </div>
