--- a/app/tpls/modal/tableColumn.html
+++ b/app/tpls/modal/tableColumn.html
@@ -1,6 +1,8 @@
 <div class="modal-content addNewScene">
 	<div class="modal-header">
-		<h3>选择需要显示的列</h3>
+		<h3>选择需要显示的列
+		<i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+		</h3>
 	</div>
 	<div class="modal-body">
         <div class="modalSelectBox">
@@ -12,6 +14,6 @@
 	</div>
 	<div class="modal-footer">
 		<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-		<input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+		<input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 	</div>
 </div>
