--- a/app/tpls/home/leftnav/projectNavBug.html
+++ b/app/tpls/home/leftnav/projectNavBug.html
@@ -1,12 +1,9 @@
 <style type="text/css">
 </style>
-<div class="projectNav" style="overflow: hidden;">
+<div class="projectNav">
     <div class="projectNavList">
         <div class="title">
             过滤器
-            <span class="chatIconButton floatright treefunicon" data-tip="新建过滤器">
-                <i class="iconfont icon-add"></i>
-            </span>
         </div>
         <ul class="projectNavListContent">
             <li class="{{projectNavNow==1?'active':''}}" ng-click="projectNavNow=1">
@@ -22,7 +19,7 @@
     <div class="leftNavList projectNavList " style="top: 120px;">
         <div class="title">
             自定义过滤器
-            <span class="chatIconButton floatright treefunicon" data-tip="过滤器管理">
+            <span ng-click="open('filterManage')" class="chatIconButton floatright treefunicon" data-tip="过滤器管理">
                 <i class="iconfont icon-guanli"></i>
             </span>
             <span class="chatIconButton floatright treefunicon" data-tip="存储为新的过滤器">
