--- a/app/tpls/home/leftnav/projectNavStatement.html
+++ b/app/tpls/home/leftnav/projectNavStatement.html
@@ -1,28 +1,25 @@
 <style type="text/css">
 </style>
-<div class="projectNav" style="overflow: hidden;">
+<div class="projectNav" style="">
     <div class="projectNavList">
         <div class="title">
             过滤器
-            <span class="chatIconButton floatright treefunicon" data-tip="新建过滤器">
-                <i class="iconfont icon-add"></i>
-            </span>
         </div>
         <ul class="projectNavListContent">
             <li class="{{projectNavNow==1?'active':''}}" ng-click="projectNavNow=1">
                 <i class="iconfont icon-shaixuan i_color6 filterIcon"></i>
-                <span class="filtername">全部项目</span>
+                <span class="filtername">全部用例</span>
             </li>
             <li class="{{projectNavNow==2?'active':''}}" ng-click="projectNavNow=2">
                 <i class="iconfont icon-shaixuan i_color7 filterIcon"></i>
-                <span class="filtername">我创建的项目</span>
+                <span class="filtername">我创建的用例</span>
             </li>
         </ul>
     </div>
     <div class="leftNavList projectNavList " style="top: 120px;">
         <div class="title">
             自定义过滤器
-            <span class="chatIconButton floatright treefunicon" data-tip="过滤器管理">
+            <span ng-click="open('filterManage')" class="chatIconButton floatright treefunicon" data-tip="过滤器管理">
                 <i class="iconfont icon-guanli"></i>
             </span>
             <span class="chatIconButton floatright treefunicon" data-tip="存储为新的过滤器">
@@ -132,4 +129,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>   
