--- a/app/tpls/modal/addDataPool.html
+++ b/app/tpls/modal/addDataPool.html
@@ -1,7 +1,9 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>添加数据池</h3>
+    <h3>添加数据池
+    <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+    </h3>
 </div>
 <div class="modal-body modalBody">
     <ul class="titleUl">          	
@@ -11,12 +13,12 @@
         </li>            
         <li class="clearfix">  
        		<h1>备注：</h1>
-            <textarea name="" rows="" cols="" class="projectTextarea" style=" width: 370px;"></textarea>              	
+            <textarea name="" rows="" cols="" class="projectTextarea" style=" width: 370px;"></textarea>
         </li>    
     </ul>
 </div>
 <div class="modal-footer">  
 	<div class="floatleft defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>是否连续添加</em></div>
     <input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
