--- a/app/tpls/modal/addDefectProcess.html
+++ b/app/tpls/modal/addDefectProcess.html
@@ -1,7 +1,9 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>添加缺陷流程</h3>
+    <h3>添加缺陷流程
+    <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+    </h3>
 </div>
 <div class="modal-body modalBody">
     <ul class="titleUl">          	
@@ -21,5 +23,5 @@
 </div>
 <div class="modal-footer">   
     <input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
