--- a/app/tpls/modal/createCompenent.html
+++ b/app/tpls/modal/createCompenent.html
@@ -1,7 +1,9 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>添加组件</h3>
+    <h3>添加组件
+    <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+    </h3>
 </div>
 <div class="modal-body modalBody">
     <ul class="titleUl">
@@ -36,5 +38,5 @@
 <div class="modal-footer">
     <div class="floatleft defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>是否连续添加</em></div>
     <input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+    <input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
