--- a/app/tpls/modal/import.html
+++ b/app/tpls/modal/import.html
@@ -1,7 +1,9 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>导入需求</h3>
+    <h3>导入需求
+    <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+    </h3>
 </div>
 <div class="modal-body modalBody">
     <ul class="titleUl">          	
@@ -22,5 +24,5 @@
 </div>
 <div class="modal-footer">   
     <input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-    <input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
+    <input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
