--- a/app/tpls/modal/projectPeople.html
+++ b/app/tpls/modal/projectPeople.html
@@ -17,19 +17,6 @@
 	    overflow-y: auto;
 	    padding: 10px 0px;
 	}
-	.btn_blue {
-	    padding: 0px 25px;
-	    text-align: center;
-	    background: #3462fe;
-	    color: #fff;
-	    font-size: 14px;
-	    height: 36px;
-	    border: 1px solid #1f4ce5;
-	    border-radius: 3px;
-	    -webkit-border-radius: 3px;
-	    -moz-border-radius: 3px;
-	    cursor: pointer;
-	}
 	.table-fullborder2{
 		width: 100%;
 	}
@@ -40,7 +27,9 @@
 	}
 </style>
 <div class="modal-header">
-	<h3>导入已有项目成员</h3>
+	<h3>导入已有项目成员
+	<i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+	</h3>
 </div>
 <div class="modal-body">
 	<div class="tableListBox">
@@ -99,6 +88,6 @@
 	</div>
 </div>
 <div class="modal-footer ng-scope">
-	<button class="btn_blue" ng-click="ok()">添加</button>
-	<button class="btn_gray" ng-click="cancel()">取消</button>
+	<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
+	<input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 </div>
