--- a/app/tpls/modal/tree.html
+++ b/app/tpls/modal/tree.html
@@ -2,7 +2,9 @@
 </style>
 <div class="modal-content">
 	<div class="modal-header">
-		<h3>选择关联组织</h3>
+		<h3>选择关联组织
+		<i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
+		</h3>
 	</div>
 	<div class="modal-body" style="height: 300px;">
 		<div class="treeBody" style="width: 80%;top: 10px;" >
@@ -35,7 +37,7 @@
 	<div class="modal-footer">
 		<div class="floatleft defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>设为默认</em></div>
 		<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
-		<input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="ok()">
+		<input type="button" name="" value="取消" class="btndefault btndefault_gray" ng-click="cancel()">
 	</div>
 </div>
 </div>
